--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1166,7 +1166,7 @@ textarea::placeholder {
   height: 5vh;
 }
 .task-cube {
-  background-color: #0c0c0cdc;
+  background-color: #0c0c0cb9;
   color: white;
   padding:0.5rem 1rem;
   margin: .1rem;
@@ -1181,7 +1181,7 @@ textarea::placeholder {
   transform: translate3d(0, 0, 0);
   border-radius: 5px;
   height: auto;
-  min-height: 25%;
+  min-height: 20%;
   width: 90%;
 }
 
@@ -1215,7 +1215,7 @@ textarea::placeholder {
   height: 5.4vh;
 }
 #link {
-  background-color: #37d2a1;
+  background-color: #009C00;
   color: white;
   margin: 0 1.2vh 0 0;
   text-decoration: none;
@@ -1228,7 +1228,7 @@ textarea::placeholder {
   height: 2vmin;
 }
 .member-sign {
-  background-color: #14aee1;
+  background-color: #01B3FF;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -1276,7 +1276,7 @@ textarea::placeholder {
   align-items: center;
   position: absolute;
   top: 0.7vmin;
-  left: 0.4vh;
+  left: 0.2vh;
   border-radius: 50%;
   width: 1.6vmin;
   height: 1.6vmin;
@@ -1313,7 +1313,7 @@ textarea::placeholder {
 .task-cube-priority {
   position: absolute;
   right: 0;
-  width: 6%;
+  width: 4%;
   height: 100%;
 }
 .modal-content {
@@ -1356,7 +1356,7 @@ textarea::placeholder {
   height: 2vmin;
 }
 .task-cube-user-page {
-  background-color: #0c0c0cdc;
+  background-color: #0c0c0cd5;
   color: white;
   padding:0.2rem .5rem 0.2rem .1rem;
   margin: .1rem;
@@ -1455,7 +1455,7 @@ textarea::placeholder {
 }
 
 .task-cube-middle-user-page .fa-clock {
-  background-color: #ff006e;
+  background-color: #FF1B01;
   color:white;
   font-size: 95%;
   margin:0;
