--- a/client/src/App.css
+++ b/client/src/App.css
@@ -14,7 +14,7 @@
 .container {
   background-image: url("./img/anne-nygard--eiU_MxStCk-unsplash.jpg");
   background-repeat: no-repeat;
-  background-position: 50% 70%;
+  background-position: 70% 50%;
   background-size: cover;
   margin: 0;
   padding: 0;
@@ -174,7 +174,7 @@ button {
 }
 
 .unexpanded-menu {
-  background-color: #040404;
+  background-color: #04040471;
   padding: 0;
   display: flex;
   align-items: center;
