--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1170,7 +1170,6 @@ textarea::placeholder {
   color: white;
   padding:0.5rem 1rem;
   margin: .1rem;
-  overflow: auto;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -1179,26 +1178,39 @@ textarea::placeholder {
   position: relative;
   transition: all 1ms ease-in-out;
   transform: translate3d(0, 0, 0);
-  border-radius: 5px;
+  border-radius: 2px;
   height: auto;
   min-height: 20%;
   width: 90%;
 }
 
 .task-title {
-  /* background-color: blanchedalmond; */
+  /* background-color: #3dd3a1; */
+  margin: 0;
+  padding: 0;
   color: white;
-  /* font-size: 1.8vmin;
-  font-family: "Heebo", sans-serif;
-  font-weight: 400; */
   display: flex;
-  justify-content: flex-start;
-  align-items: flex-end;
+  justify-content: flex-end;
+  align-items: flex-start;
+  flex-direction: column;
   width: 94%;
-  min-height: 35%;
+  height: auto;
+  min-height: 50px;
+}
+#task-cube-name{
+  /* background-color: crimson; */
+  margin: 0;
+  padding: 0;
+  word-break: break-all;
+  width: 95%;
   height: auto;
 }
-
+#task-cube-line{
+  background-color: #01b3ffbb;
+  margin-top: 1vh;
+  width: 50%;
+  height: .1px;
+}
 .fa-bookmark {
   font-size: 140%;
   position: absolute;
@@ -1485,11 +1497,12 @@ textarea::placeholder {
 }
 
 .members-container {
+  /* background-color: #b700c5; */
   overflow-x: scroll;
   position: relative;
   /* width: auto; */
   width: 94%;
-  height: 3vmin;
+  height: 3.2vmin;
 }
 .members-container-user-page {
   overflow-x: scroll;
@@ -1577,6 +1590,7 @@ textarea::placeholder {
   border-radius: 15px;
   transition: all 0.7s ease-in-out;
   width: 77vw;
+  min-height: 87.5vh;;
   height: auto;
 }
 
@@ -1741,7 +1755,7 @@ textarea::placeholder {
   justify-content: center;
   align-items: center;
   width: 60vw;
-  height: 10vh;
+  height: 20vh;
 }
 
 .task-page-desc {
@@ -1982,7 +1996,6 @@ textarea::placeholder {
   flex-direction: column;
   border-radius: 15px;
   transition: all 0.7s ease-in-out;
-
   width: 91vw;
   height: 87.5vh;
 }
@@ -2023,17 +2036,17 @@ textarea::placeholder {
 
 .user-name {
   /* color: #121216; */
-  color: white;
-  font-family: "Heebo", sans-serif;
+  /* background-color: green; */
+  font-family: "Lato", sans-serif;
   font-weight: 600;
-  font-size: 180%;
+  font-size: 220%;
   margin: 0;
   padding: 0;
   display: flex;
   align-items: center;
   justify-content: center;
   width: 60vw;
-  height: 8vh;
+  height: 30vh;
 }
 
 .user-task-container {
