--- a/client/src/App.css
+++ b/client/src/App.css
@@ -803,23 +803,29 @@ button {
 #team-plus {
   background-color: #b700c5;
   color: white;
-  font-size: 100%;
+  font-family: "Heebo", sans-serif;
+  font-size:110%;
+  font-weight: 400;
   margin: 0;
   padding: 0;
   display: flex;
   align-items: center;
   justify-content: center;
   text-decoration: none;
-  border-radius: 50%;
+  border-radius: 40px;
   position: fixed;
   top: 4vh;
   right: 4.8vh;
-  width: 4.5vh;
+  width: 10vh;
   height: 4.5vh;
 }
-
-#team-plus:hover {
-  font-size: 120%;
+#plus-sign{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+#team-plus:hover > #plus-sign{
+  font-size: 130%;
 }
 
 .add-team-form {
@@ -953,23 +959,25 @@ button {
 #add-task-btn {
   background-color: #b800c5;
   color: white;
-  font-size: 100%;
+  font-family: "Heebo", sans-serif;
+  font-size:100%;
+  font-weight: 400;
   margin: 0;
   padding: 0;
   display: flex;
   align-items: center;
   justify-content: center;
   text-decoration: none;
-  border-radius: 50%;
+  border-radius: 30px;
   position: fixed;
   top: 4.4vh;
-  right: 11vh;
-  width: 3.5vh;
-  height: 3.5vh;
+  right: 16.5vh;
+  width: 7vh;
+  height: 4vh;
 }
 
-#add-task-btn:hover {
-  font-size: 120%;
+#add-task-btn:hover > #plus-sign-task{
+  font-size: 130%;
 }
 
 .board-header {
@@ -1144,7 +1152,7 @@ textarea::placeholder {
   border-radius: 50%;
   position: absolute;
   top: 3vh;
-  right: 10vh;
+  right: 13.5vh;
   width: 3.5vh;
   height: 3.5vh;
 }
